--- a/apps/nuxt-app/package.json
+++ b/apps/nuxt-app/package.json
@@ -3,24 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt --port 3001",
-    "build": "nuxt build",
-    "start": "nuxt start --port 3001",
-    "generate": "nuxt generate"
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi start",
+    "generate": "nuxi generate"
   },
   "dependencies": {
     "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
+    "nuxt": "^3.5.1",
+    "vue": "^3.3.1",
+    "vue-router": "4.2.5",
+    "vue-server-renderer": "^2.7.14",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0",
     "vue-ui": "*"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxt/types": "^2.7.1",
     "postcss": "^8.4.4",
     "tsconfig": "*"
   }
